2014-07-23  Brent Fulgham  <bfulgham@apple.com>

        [Win] Use NO_RETURN_DUE_TO_CRASH on Windows
        https://bugs.webkit.org/show_bug.cgi?id=135199

        Reviewed by Mark Lam.

        * jsc.cpp:
        (WTF::RuntimeArray::deleteProperty): Stop using ugly
        compiler work-around on Windows; use NO_RETURN_DUE_TO_CRASH
        codepath instead.
        * runtime/Identifier.h: Add NO_RETURN_DUE_TO_CRASH
        to header so function declaration matches implementation.

2014-07-23  Bem Jones-Bey  <bjonesbe@adobe.com>

        Remove CSS_EXCLUSIONS compile flag and leftover code
        https://bugs.webkit.org/show_bug.cgi?id=135175

        Reviewed by Zoltan Horvath.

        At this point, the CSS_EXCLUSIONS flag guards nothing but some useless
        stubs. This removes the flag and the useless code.

        * Configurations/FeatureDefines.xcconfig:

2014-07-23  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r171367.
        https://bugs.webkit.org/show_bug.cgi?id=135192

        broke three API tests (Requested by thorton on #webkit).

        Reverted changeset:

        "JSLock release should only modify the AtomicStringTable if it
        modified in acquire"
        https://bugs.webkit.org/show_bug.cgi?id=135143
        http://trac.webkit.org/changeset/171367

2014-07-22  László Langó  <llango.u-szeged@partner.samsung.com>

        [EFL] Build fix after the [ftlopt] branch merge.

        Reviewed by Csaba Osztrogonác.

        * dfg/DFGBranchDirection.h:
        (JSC::DFG::branchDirectionToString):
        * dfg/DFGStructureClobberState.h:
        (JSC::DFG::merge):

2014-07-22  Brent Fulgham  <bfulgham@apple.com>

        Build fix for non-clang compile.

        * jsc.cpp:
        (WTF::RuntimeArray::put): Remove incorrect return statement
        I added.

2014-07-22  Brent Fulgham  <bfulgham@apple.com>

        Build fix for non-clang compile.

        * jsc.cpp: