@@ -113,8 +113,13 @@ namespace JSC {
         static PassRef<StringImpl> add(ExecState*, StringImpl*);
         static PassRef<StringImpl> add(VM*, StringImpl*);
 
+#ifndef NDEBUG
+        JS_EXPORT_PRIVATE static void checkCurrentAtomicStringTable(ExecState*);
+        JS_EXPORT_PRIVATE static void checkCurrentAtomicStringTable(VM*);
+#else
         JS_EXPORT_PRIVATE NO_RETURN_DUE_TO_CRASH static void checkCurrentAtomicStringTable(ExecState*);
         JS_EXPORT_PRIVATE NO_RETURN_DUE_TO_CRASH static void checkCurrentAtomicStringTable(VM*);
+#endif
     };
 
     template <> ALWAYS_INLINE bool Identifier::canUseSingleCharacterString(LChar)
